# cs336-assignment1

./: .gitignore  README.md  pyproject.toml
bpe_tokenizer_rs/: Cargo.toml
bpe_tokenizer_rs/src/: lib.rs
cs336_basics/: bpe.py  model_components.py  tokenizer.py  train_bpe_expts_owt.py  train_bpe_tinystories.py
tests/: adapters.py
utils/: train_bpe_expts_owt.py  train_bpe_tinystories.py
