[package]
name = "bpe_tokenizer_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "bpe_tokenizer_rs"
crate-type = ["cdylib"]  # 声明这是一个 C 动态库 (用于 Python)

[dependencies]
# PyO3 核心依赖
pyo3 = { version = "0.21.0", features = ["extension-module"] }

# serde 用于解析 JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rust 的正则表达式库
regex = "1.10.4"

# 用于编译时/延迟初始化 Regex
lazy_static = "1.4.0"